objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PSO_Amount__c</fullName>
        <description>Vertiba 3/10/14 - added help text per discussion - this field will contain PSO amount only if bundled PSO package (sm, med, lg).  If a custom PSO SOW exists, a separate opportunity will be created for PSO</description>
        <inlineHelpText>Enter the PSO amount if this opportunity includes a bundled PSO package.  For a custom PSO scope of work, create a separate opportunity for the PSO and do not enter a PSO amount for this opportunity.</inlineHelpText>
        <label>PSO Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSO_mgmt_commit__c</fullName>
        <label>PSO mgmt commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field shall be used to identify the billing account (the account who is the registered partner - can be different to the End customer or bill to account).
Request: johko 26.01.2018 - to be used for SAP integration</description>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>partneropportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Type__c</fullName>
        <description>Shall be used to track the commission type of a partner, needed by FI. Request verba 26.01.2018</description>
        <label>Partner Commission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MDF</fullName>
                </value>
                <value>
                    <fullName>Referral Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Commission__c</fullName>
        <description>Shall be used to track the commission payout of a partner, needed by FI. Request verba 26.01.2018</description>
        <label>Partner Commission %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6%</fullName>
                </value>
                <value>
                    <fullName>9%</fullName>
                </value>
                <value>
                    <fullName>12%</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>No Payout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Reseller Partner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AiM Services</fullName>
                </value>
                <value>
                    <fullName>Akros</fullName>
                </value>
                <value>
                    <fullName>Anecon</fullName>
                </value>
                <value>
                    <fullName>Autom8</fullName>
                </value>
                <value>
                    <fullName>C1 Solutions</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>Comparex</fullName>
                </value>
                <value>
                    <fullName>EPAM</fullName>
                </value>
                <value>
                    <fullName>GOSPA</fullName>
                </value>
                <value>
                    <fullName>HBO</fullName>
                </value>
                <value>
                    <fullName>HC Solutions GmbH</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Infometis</fullName>
                </value>
                <value>
                    <fullName>Lion Bridge</fullName>
                </value>
                <value>
                    <fullName>Mind Tree</fullName>
                </value>
                <value>
                    <fullName>MSG Systems</fullName>
                </value>
                <value>
                    <fullName>NTT Data</fullName>
                </value>
                <value>
                    <fullName>Ordina</fullName>
                </value>
                <value>
                    <fullName>Polarion</fullName>
                </value>
                <value>
                    <fullName>Predicate Partners</fullName>
                </value>
                <value>
                    <fullName>QiQ Qcentris</fullName>
                </value>
                <value>
                    <fullName>Quasus</fullName>
                </value>
                <value>
                    <fullName>Quence</fullName>
                </value>
                <value>
                    <fullName>Saxonia Systems AG</fullName>
                </value>
                <value>
                    <fullName>Tas Group</fullName>
                </value>
                <value>
                    <fullName>The Testing Consultancy (TTC)</fullName>
                </value>
                <value>
                    <fullName>Valori</fullName>
                </value>
                <value>
                    <fullName>Venor Groep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked it indicates that the referring Opportunity has at least one Partner Role assigned. (Does not mean that referring Opportunity is Partner-sourced)</description>
        <inlineHelpText>If checked it indicates that the referring Opportunity has at least one Partner Role assigned. (Does not mean that referring Opportunity is Partner-sourced)</inlineHelpText>
        <label>Partner registered Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pipeline_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Tri_Forecast__c , &quot;Pipeline&quot;), Normalized_ACV__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PoC__c</fullName>
        <description>requested a name change from &quot;PoC&quot; to &quot;Pilot&quot;
verba 20.02.2018</description>
        <label>Pilot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Depricated Primary Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Proposed__c</fullName>
        <description>Vertiba 3/10/14 - debrief information to compare Tricentis products to competitor products</description>
        <inlineHelpText>Describe products in Tricentis proposal</inlineHelpText>
        <label>Products Proposed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTD_Current_and_Previous_FY__c</fullName>
        <formula>IF
(
                OR(
                
                AND(
                                (MONTH(TODAY())=1 || MONTH(TODAY())=2 || MONTH(TODAY())=3), 
                                OR(
                                Date(YEAR(TODAY()),1,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY()),MONTH(TODAY()),DAY(TODAY())),
                                Date(YEAR(TODAY())-1,1,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY())-1,MONTH(TODAY()),DAY(TODAY()))                               )
                ),
                AND(
                                (MONTH(TODAY())=4 || MONTH(TODAY())=5 || MONTH(TODAY())=6), 
                                OR(
                                Date(YEAR(TODAY()),4,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY()),MONTH(TODAY()),DAY(TODAY())),
                                Date(YEAR(TODAY())-1,4,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY())-1,MONTH(TODAY()),DAY(TODAY()))
                                )
                ),
                AND(
                                (MONTH(TODAY())=7 || MONTH(TODAY())=8 || MONTH(TODAY())=9), 
                                OR(
                                Date(YEAR(TODAY()),7,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY()),MONTH(TODAY()),DAY(TODAY())),
                                Date(YEAR(TODAY())-1,7,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY())-1,MONTH(TODAY()),DAY(TODAY()))
                                )
                ),
                AND(
                                (MONTH(TODAY())=10 || MONTH(TODAY())=11 || MONTH(TODAY())=12), 
                                OR(
                                Date(YEAR(TODAY()),10,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY()),MONTH(TODAY()),DAY(TODAY())),
                                Date(YEAR(TODAY())-1,10,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY())-1,MONTH(TODAY()),DAY(TODAY()))
                                )
                )), 

true, 
false)</formula>
        <label>QTD Current and Previous FY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarter_Target_Global_LIC_FYM__c</fullName>
        <formula>CASE(Close_Quarter_Year__c, 
&quot;Q1 - 2016&quot;,3099000,
&quot;Q2 - 2016&quot;,3752000, 
&quot;Q3 - 2016&quot;,4502000, 
&quot;Q4 - 2016&quot;,6752000,
&quot;Q1 - 2017&quot;,4368000,
&quot;Q2 - 2017&quot;,4957000, 
&quot;Q3 - 2017&quot;,6393000, 
&quot;Q4 - 2017&quot;,9917000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Target Global: ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_Target_Global_PSO__c</fullName>
        <formula>CASE(Close_Quarter_Year__c, 
&quot;Q1 - 2014&quot;,965000, 
&quot;Q2 - 2014&quot;,1882000, 
&quot;Q3 - 2014&quot;,1561000, 
&quot;Q4 - 2014&quot;,3749000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Target Global: PSO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_Target_Global__c</fullName>
        <formula>CASE(Close_Quarter_Year__c, 
&quot;Q2 - 2014&quot;,2693000,
&quot;Q2 - 2014&quot;,5029000, 
&quot;Q3 - 2014&quot;,4357000, 
&quot;Q4 - 2014&quot;,9314000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Target Global: LIC + FYM + PSO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_Target_LIC_FYM_PSO__c</fullName>
        <formula>IF(ISPICKVAL(Account.geo__c, &quot;EMEA&quot;), 
CASE(Close_Quarter_Year__c , 
&quot;Q1 - 2016&quot;,1152000,
&quot;Q2 - 2016&quot;,1392000, 
&quot;Q3 - 2016&quot;,1730000, 
&quot;Q4 - 2016&quot;,2742000,0),  
IF(ISPICKVAL(Account.geo__c, &quot;AMS&quot;), 
CASE(Close_Quarter_Year__c , 
&quot;Q1 - 2016&quot;,1380000,
&quot;Q2 - 2016&quot;,1680000, 
&quot;Q3 - 2016&quot;,1980000, 
&quot;Q4 - 2016&quot;,2880000,0),  
IF(ISPICKVAL(Account.geo__c, &quot;APAC&quot;), 
CASE(Close_Quarter_Year__c, 
&quot;Q1 - 2016&quot;,362000,
&quot;Q2 - 2016&quot;,475000, 
&quot;Q3 - 2016&quot;,587000,  
&quot;Q4 - 2016&quot;,925000,0),
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Target: LIC + FYM + PSO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_Target_LIC_FYM__c</fullName>
        <formula>IF(ISPICKVAL(Account.geo__c, &quot;EMEA&quot;), 
CASE(Close_Quarter_Year__c , 
&quot;Q1 - 2017&quot;,1989000,
&quot;Q2 - 2017&quot;,2371000, 
&quot;Q3 - 2017&quot;,3215000, 
&quot;Q4 - 2017&quot;,4063000,0),  
IF(ISPICKVAL(Account.geo__c, &quot;AMS&quot;), 
CASE(Close_Quarter_Year__c , 
&quot;Q1 - 2017&quot;,1661000, 
&quot;Q2 - 2017&quot;,1724000, 
&quot;Q3 - 2017&quot;,2146000, 
&quot;Q4 - 2017&quot;,4467000,0), 
IF(ISPICKVAL(Account.geo__c, &quot;APAC&quot;), 
CASE(Close_Quarter_Year__c, 
&quot;Q1 - 2017&quot;,718000,
&quot;Q2 - 2017&quot;,862000, 
&quot;Q3 - 2017&quot;,1032000, 
&quot;Q4 - 2017&quot;,1388000,0),  
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Target: ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_Target_PSO__c</fullName>
        <formula>IF(ISPICKVAL(Account.geo__c, &quot;EMEA&quot;), 
    CASE(Close_Quarter_Year__c , 
                &quot;Q1 - 2014&quot;,780000,
                 &quot;Q2 - 2014&quot;,1571000,
                  &quot;Q3 - 2014&quot;,1244000,
                   &quot;Q4 - 2014&quot;,3244000,0),
IF(ISPICKVAL(Account.geo__c, &quot;AMS&quot;), 
    CASE(Close_Quarter_Year__c , 
                &quot;Q1 - 2014&quot;,67000,
                 &quot;Q2 - 2014&quot;,127000,
                  &quot;Q3 - 2014&quot;,112000,
                   &quot;Q4 - 2014&quot;,212000,0),
IF(ISPICKVAL(Account.geo__c, &quot;APAC&quot;), 
    CASE(Close_Quarter_Year__c, 
                &quot;Q1 - 2014&quot;,118000,
                 &quot;Q2 - 2014&quot;,184000,
                  &quot;Q3 - 2014&quot;,204000,
                   &quot;Q4 - 2014&quot;,292000,0),
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Target: PSO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <description>Anton requested this field for reporting. We want to separate the ARR bookings from Renewals and only use it in the meantime until CPQ renewals are ready
bazwe 29.09.2017</description>
        <inlineHelpText>Anton requested this field for reporting. We want to separate the ARR bookings from Renewals and only use it in the meantime until CPQ renewals are ready
bazwe 29.09.2017</inlineHelpText>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARR</fullName>
                </value>
                <value>
                    <fullName>First Year Business</fullName>
                    <default>true</default>
                    <label>First Year Business</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Term__c</fullName>
        <description>Choose the subscription term for a subscription opportunity. If the opportunity is for perpetual licenses choose NA.</description>
        <inlineHelpText>Choose the subscription term for a subscription opportunity. If the opportunity is for perpetual licenses choose NA.</inlineHelpText>
        <label>Subscription Term in years</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_value_of_perpetual_products__c</fullName>
        <description>the total of net totals of all the perpetual products of primary quote under this opportunity</description>
        <inlineHelpText>the total of net totals of all the perpetual products of primary quote under this opportunity</inlineHelpText>
        <label>Sum value of perpetual products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_value_of_subscription_products__c</fullName>
        <description>the total of net totals of all the subscription products of primary quote under this opportunity</description>
        <inlineHelpText>the total of net totals of all the subscription products of primary quote under this opportunity</inlineHelpText>
        <label>Sum value of subscription products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_value_of_support_products__c</fullName>
        <description>the total of net totals of all the support products of primary quote under this opportunity</description>
        <inlineHelpText>the total of net totals of all the support products of primary quote under this opportunity</inlineHelpText>
        <label>Sum value of support products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To update &quot;Total Contract Value&quot; based on the scenario provided for the existing records this field is used.</description>
        <label>TCV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technologies__c</fullName>
        <label>Technologies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.NET</fullName>
                </value>
                <value>
                    <fullName>Adobe Flash</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>AngularJS</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Edge</fullName>
                </value>
                <value>
                    <fullName>FireFox</fullName>
                </value>
                <value>
                    <fullName>FIXML</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>IBM Websphere MQ</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>JMS</fullName>
                </value>
                <value>
                    <fullName>JSON</fullName>
                </value>
                <value>
                    <fullName>Main Frame</fullName>
                </value>
                <value>
                    <fullName>MS Silverlight</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PowerBuilder</fullName>
                </value>
                <value>
                    <fullName>RAML</fullName>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
                <value>
                    <fullName>SWIFT</fullName>
                </value>
                <value>
                    <fullName>UIA</fullName>
                </value>
                <value>
                    <fullName>WIN32</fullName>
                </value>
                <value>
                    <fullName>WPF</fullName>
                </value>
                <value>
                    <fullName>WSDL</fullName>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tosca_Products__c</fullName>
        <label>Tosca Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accelerator Package - SAP</fullName>
                </value>
                <value>
                    <fullName>Accelerator Package - Service Now</fullName>
                </value>
                <value>
                    <fullName>Accelerator Package - SFDC</fullName>
                </value>
                <value>
                    <fullName>Autonomous SAP Testing</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>Enterprise Dashboard</fullName>
                </value>
                <value>
                    <fullName>Exploratory Testing</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Modern Apps Edition</fullName>
                </value>
                <value>
                    <fullName>OSV</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Premium Edition</fullName>
                </value>
                <value>
                    <fullName>Tosca Connect</fullName>
                </value>
                <value>
                    <fullName>Tricentis Cloud</fullName>
                </value>
                <value>
                    <fullName>API Test</fullName>
                    <isActive>false</isActive>
                    <label>API Test</label>
                </value>
                <value>
                    <fullName>BI Testing</fullName>
                    <isActive>false</isActive>
                    <label>BI Testing</label>
                </value>
                <value>
                    <fullName>Dashboard &amp; Reporting</fullName>
                    <isActive>false</isActive>
                    <label>Dashboard &amp; Reporting</label>
                </value>
                <value>
                    <fullName>Flood.IO</fullName>
                    <isActive>false</isActive>
                    <label>Flood.IO</label>
                </value>
                <value>
                    <fullName>Risk Based Testing</fullName>
                    <isActive>false</isActive>
                    <label>Risk Based Testing</label>
                </value>
                <value>
                    <fullName>Service Virtualization / API</fullName>
                    <isActive>false</isActive>
                    <label>Service Virtualization / API</label>
                </value>
                <value>
                    <fullName>Service Virtualization / OSV</fullName>
                    <isActive>false</isActive>
                    <label>Service Virtualization / OSV</label>
                </value>
                <value>
                    <fullName>Service Virtualization / SV</fullName>
                    <isActive>false</isActive>
                    <label>Service Virtualization / SV</label>
                </value>
                <value>
                    <fullName>Test Data Management</fullName>
                    <isActive>false</isActive>
                    <label>Test Data Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Age_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Closed_Won_Date__c)), (Closed_Won_Date__c-Lead_Created_Date_Time__c)*24,
IF(ISNULL(Closed_Won_Date__c), (NOW()-Lead_Created_Date_Time__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Age (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Deal_mgmt_commit__c</fullName>
        <formula>LIC_FYM_mgmt_commit__c + PSO_mgmt_commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deal mgmt commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pipeline_NACV_in_Euro__c</fullName>
        <description>Forecasted value of the deal by the sales rep.
Request by noefi 17.01.2018</description>
        <label>Total Pipeline NACV in Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_contract_value1__c</fullName>
        <label>Total contract value CPQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_contract_value__c</fullName>
        <description>ACV * subscription term 
Depricated as of October 2017 - CPQ writes TCV into new TCV field</description>
        <inlineHelpText>ACV * subscription term</inlineHelpText>
        <label>Total contract value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Shall be used to distinguish &quot;real deals&quot; from &quot;noise&quot; (like Partner fees or one time licenses for a pilot etc.)
Request by verba 05022018</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                    <default>true</default>
                    <label>Sale</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tri_Business_Goals_Identified__c</fullName>
        <description>Vertiba 3/10/14 - debrief information</description>
        <inlineHelpText>List specific business goals identified for customer</inlineHelpText>
        <label>Business Goals Identified</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>